Adding openjdk-8 as run-dep, resolves T5261
Summary:
Adding openjdk-8 as run-dep, resolves T5261.
Was missing previously and had to be installed manually.

Test Plan: Build, install and execution successfully tested.

Reviewers: #triage_team, DataDrake

Reviewed By: #triage_team, DataDrake

Subscribers: DataDrake

Maniphest Tasks: T5261

Differential Revision: https://dev.solus-project.com/D1635

--- a/package.yml
+++ b/package.yml
@@ -14,6 +14,7 @@ builddeps  :
     - openjfx-8
 rundeps    :
     - openjfx-8
+    - openjdk-8
 networking : yes
 build      : |
     export MAVEN_OPTS="-Dmaven.repo.local=./m2"
