Make pdfsam use openjdk-8 specifically
Summary: Make pdfsam use openjdk-8 specifically.

Test Plan: It still runs from terminal and .desktop file.

Reviewers: #triage_team, DataDrake

Reviewed By: #triage_team, DataDrake

Subscribers: DataDrake

Differential Revision: https://dev.getsol.us/D8814

--- a/files/pdfsam.desktop
+++ b/files/pdfsam.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=PDFsam Basic
 Comment=Open source desktop application to split, merge, rotate and mix PDF files
-Exec=/usr/share/pdfsam/bin/pdfsam.sh %F
+Exec=/usr/bin/pdfsam %F
 Icon=pdfsam
 MimeType=application/pdf
 Terminal=false
